# EV_battery_management_system

./: .gitignore  Arduino_Uno_Q_Matrix_Test.ino  DEMO_SCRIPT.md  EV_GUARDIAN_ASCII_FLOW.txt  EV_GUARDIAN_ASCII_FLOWCHART.txt  EV_GUARDIAN_CLEAR_FLOWCHART.txt  EV_GUARDIAN_CLOUD_AI100_FLOW.txt  EV_GUARDIAN_FLOWCHART.html  EV_GUARDIAN_FLOW_SUMMARY.txt  EV_GUARDIAN_FULL_FLOW.md  EV_GUARDIAN_NODE_FLOWS.md  EV_GUARDIAN_ROLE_FLOWS.txt  EV_GUARDIAN_SIMPLE_EXPLANATION.txt  EV_GUARDIAN_SNAPDRAGON_X_FLOW.txt  EV_GUARDIAN_UNO_Q_FLOW.txt  EV_Guardian_TestCLI.spec  HOW_PINN_FINDS_VALUES.txt  MOBILE_BLUETOOTH_INTEGRATION.md  NEURAL_MPC_COMPLETE_BLUEPRINT.txt  NEURAL_MPC_LIVE_EXAMPLE.txt  PINN_BMS_THEORY_AND_WORKFLOW.txt  README.md  ZEPHYR_RTOS_COMPLETE_BLUEPRINT.md  ZEPHYR_RTOS_ML_INTEGRATION.md  ZEPHYR_RTOS_PORTING_AND_STUDY_GUIDE.md  ZEPHYR_RTOS_WIRING_AND_ARCHITECTURE.md  anomaly_model.onnx  backend.py  bluetooth_daemon.py  cloud_sync.py  configure_board_boot.py  dummy_publisher.py  ev_guardian_flow_problem_statements.md  ev_guardian_mobile_problem_statements.md  fast_test_cli.py  launch.py  launch_standalone.sh  llm_diagnostics.py  mobile_app_features_blueprint.md  mobile_sam2_ar_pipeline.dart  (+18 more)
Arduino_Uno_Q_Matrix_Test/: Arduino_Uno_Q_Matrix_Test.ino
dashboard/: analytics.html  common.css  copilot.html  index.html  models.html
ev_guardian_uno_q/: ev_guardian_uno_q.ino
fault_classifier/: battery_fault_classifier.onnx  best_model_config.json  config.py  feature_engineering.py  feature_scaler.joblib  inference.py  (+2 more)
firmware/: CMakeLists.txt  arduino_uno_q.overlay  main.c  prj.conf
(+36 files in other folders)
